# Kyberauth

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: aes.rs  client.rs  key.rs  lib.rs  main.rs  server.rs  test.rs
tests/: test.rs
