[package]
name = "kyberauth"
version = "0.1.0"
authors = ["DorianCoding"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["cryptography","kem","aes256"]
categories = ["authentication","cryptography"]
description = "Enable AES keys transfer on unsecure channel using quantum-resistant Kyber"
repository = "https://github.com/DorianCoding/Kyberauth"
rust-version = "1.73"
[dependencies]
aes-gcm = "0.10.3"
futures = "0.3.29"
hex = "0.4.3"
pqc_kyber = { version = "0.7.1", features = ["std", "zeroize"] }
rand = "0.8.5"
sha3 = "0.10.8"
tokio = { version = ">=1.35.0", features = ["net", "rt", "io-util","macros"] }
winapi = "0.3.9"
zeroize = "1.7.0"
[lints.rust]
unsafe_code = "warn"
[badges]
maintenance = {status = "passively-maintained" }